[nasa/Cryptolib#291] Testing CodeQL Refactor

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -40,6 +40,22 @@ jobs:
 
     env: 
       BUILD_STRING: build_internal.sh
+      BUILD_DEPENDENCIES: sudo apt-get install -y lcov libcurl4-openssl-dev libmariadb-dev libmariadb-dev-compat python3 && sudo pip install pycryptodome
+      BUILD_SETUP: curl  \
+        -LS https://www.gnupg.org/ftp/gcrypt/libgpg-error/libgpg-error-1.50.tar.bz2 \
+        -o /tmp/libgpg-error-1.50.tar.bz2 \
+        && tar -xjf /tmp/libgpg-error-1.50.tar.bz2 -C /tmp/ \
+        && cd /tmp/libgpg-error-1.50 \
+        && sudo ./configure \
+        && sudo make install \
+        && curl  \
+        -LS https://www.gnupg.org/ftp/gcrypt/libgcrypt/libgcrypt-1.11.0.tar.bz2 \
+        -o /tmp/libgcrypt-1.11.0.tar.bz2 \
+        && tar -xjf /tmp/libgcrypt-1.11.0.tar.bz2 -C /tmp/ \
+        && cd /tmp/libgcrypt-1.11.0 \
+        && sudo ./configure \
+        && sudo make install \
+        && sudo ldconfig 
 
 
     strategy:
@@ -84,21 +100,8 @@ jobs:
     - if: matrix.build-mode == 'manual'
       shell: bash
       run: |
-        curl  \
-        -LS https://www.gnupg.org/ftp/gcrypt/libgpg-error/libgpg-error-1.50.tar.bz2 \
-        -o /tmp/libgpg-error-1.50.tar.bz2 \
-        && tar -xjf /tmp/libgpg-error-1.50.tar.bz2 -C /tmp/ \
-        && cd /tmp/libgpg-error-1.50 \
-        && sudo ./configure \
-        && sudo make install \
-        && curl  \
-        -LS https://www.gnupg.org/ftp/gcrypt/libgcrypt/libgcrypt-1.11.0.tar.bz2 \
-        -o /tmp/libgcrypt-1.11.0.tar.bz2 \
-        && tar -xjf /tmp/libgcrypt-1.11.0.tar.bz2 -C /tmp/ \
-        && cd /tmp/libgcrypt-1.11.0 \
-        && sudo ./configure \
-        && sudo make install \
-        && sudo ldconfig 
+        $BUILD_DEPENDENCIES
+        $BUILD_SETUP        
         bash ${GITHUB_WORKSPACE}/support/scripts/$BUILD_STRING
   
   
