--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -14,7 +14,7 @@ name: "CodeQL Advanced"
 
 on: 
   push:
-    branches: [ main, dev, 291-apply-codeql-workflow-to-all-builds ]
+    branches: [ main, dev ]
   pull_request:
     branches: [ main, dev ]
 
