--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -146,7 +146,12 @@ jobs:
            cmake --build .;
            sudo make install;
            sudo ldconfig;
+      - name: Install Dependencies
+        run: sudo apt-get install -y lcov libcurl4-openssl-dev libmariadb-dev libmariadb-dev-compat python3 autoconf libtool
 
+      - name: Install Python Libraries
+        run: sudo pip install pycryptodome
+        
       - name: Update Dependencies
         run: >
           curl -LS https://www.gnupg.org/ftp/gcrypt/libgpg-error/libgpg-error-1.50.tar.bz2 -o /tmp/libgpg-error-1.50.tar.bz2 
