--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -9,7 +9,6 @@
 # the `language` matrix defined below to confirm you have the correct set of
 # supported CodeQL languages.
 #
----
 name: "CodeQL Advanced"
 
 on: 
@@ -21,7 +20,7 @@ on:
 jobs:
   analyze:
     name: Analyze Build_Internal
-    runs-on: ubuntu-latest
+    runs-on:  ${{ (matrix.language == 'swift' && 'macos-latest') || 'ubuntu-latest' }}
     permissions:
       # required for all workflows
       security-events: write
