--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -13,7 +13,7 @@ name: "CodeQL Advanced"
 
 on: 
   push:
-    branches: [ main, dev ]
+    branches: [ main, dev, 277-revisit-ci-build-scripts ]
   pull_request:
     branches: [ main, dev ]
 
