[nasa/cryptolib#277] workflow updates

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -228,7 +228,7 @@ jobs:
     - name: install lcov
       run: yum install -y --enablerepo=epel lcov
     - name: Install Python Dependencies
-      run: pip3 install pycryptodome
+      run: pip install pycryptodome
     - name: Install Libgcrypt
       run: >
         curl 
