[nasa/cryptolib#299] Add format/tidy review

--- a/.github/workflows/cpp-linter.yml
+++ b/.github/workflows/cpp-linter.yml
@@ -11,6 +11,7 @@ jobs:
     permissions:
       pull-requests: write
       contents: write
+      metadata: read
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -21,3 +22,5 @@ jobs:
           style: 'file'
           files-changed-only: false
           thread-comments: true
+          format-review: true
+          tidy-review: true
