[nasa/cryptolib#299] Re-add style and remove tidy-review

--- a/.github/workflows/cpp-linter.yml
+++ b/.github/workflows/cpp-linter.yml
@@ -18,7 +18,7 @@ jobs:
         id: linter
         continue-on-error: true
         with:
+          style: 'file'
           files-changed-only: false
           thread-comments: true
           format-review: true
-          tidy-review: true
