[nasa/cryptolib#331] Additional unit test asserts, changed sdls reply handling, renamed key EP UT file name, structure packing updates

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -61,8 +61,8 @@ add_test(NAME UT_EP_SA_MGMT
          COMMAND ${PROJECT_BINARY_DIR}/bin/ut_ep_sa_mgmt 
          WORKING_DIRECTORY ${PROJECT_TEST_DIR})
          
-add_test(NAME UT_EP_KEY_VALIDATION
-         COMMAND ${PROJECT_BINARY_DIR}/bin/ut_ep_key_validation 
+add_test(NAME UT_EP_KEY_MGMT
+         COMMAND ${PROJECT_BINARY_DIR}/bin/ut_ep_key_mgmt 
          WORKING_DIRECTORY ${PROJECT_TEST_DIR})
 
 if(NOT ${CRYPTO_WOLFSSL})
