[nasa/cryptolib#331] use cryptolib container

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -21,6 +21,8 @@ jobs:
   build_internal:
     name: Analyze Build_Internal
     runs-on: ${{ (matrix.language == 'swift' && 'macos-latest') || 'ubuntu-latest' }}
+    container:
+        image: ivvitc/cryptolib:20240814
     permissions:
       # required for all workflows
       security-events: write
@@ -71,6 +73,8 @@ jobs:
   build_minimal:
       name: Analyze Build_Minimal
       runs-on: ${{ (matrix.language == 'swift' && 'macos-latest') || 'ubuntu-latest' }}
+      container:
+        image: ivvitc/cryptolib:20240814
       permissions:
         # required for all workflows
         security-events: write
@@ -121,6 +125,8 @@ jobs:
   build_wolf:
       name: Analyze Build_Wolf
       runs-on: ${{ (matrix.language == 'swift' && 'macos-latest') || 'ubuntu-latest' }}
+      container:
+        image: ivvitc/cryptolib:20240814
       permissions:
         # required for all workflows
         security-events: write
@@ -200,6 +206,8 @@ jobs:
   build_rhel:
       name: Analyze Build_RHEL
       runs-on: ${{ (matrix.language == 'swift' && 'macos-latest') || 'ubuntu-latest' }}
+      container:
+        image: ivvitc/cryptolib:20240814
       permissions:
         # required for all workflows
         security-events: write
