[nasa/cryptolib#334] Remove testing branch from push triggers

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -13,7 +13,7 @@ name: "CodeQL Advanced"
 
 on:
   push: 
-    branches: [ dev, 334-resolve-codeql-ci-failures ]
+    branches: [ dev ]
   pull_request:
     branches: [ main, dev ]
 
